hvg/templates/kvg.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: apple-app
  labels:
    app: apple
  namespace: app
spec:
  containers:
  - name: apple-app
    image: 128230169866.dkr.ecr.eu-west-1.amazonaws.com/test:latest
    args:
        - "-text=apple"
