hvg/templates/hvg.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: apple-app
  labels:
    app: apple
  namespace: app
spec:
  containers:
  - name: apple-app
    image: hashicorp/http-echo
    args:
        - "-text=apple"
---
apiVersion: v1
kind: Service
metadata:
  name: apple-service
  namespace: app
spec:
  selector:
    app: apple
  ports:
    - port: 3032 # Default port for image
      targetPort: 5678
      name: http
    - port: 443 # Default port for image
      targetPort: 5678
      name: htt
---
kind: Pod
apiVersion: v1
metadata:
  name: banana-app
  labels:
    app: banana
  namespace: app  
spec:
  containers:
  - name: banana-app
    image: hashicorp/http-echo
    args:
        - "-text=banana"

---

kind: Service
apiVersion: v1
metadata:
  name: banana-service
  namespace: app
spec:
  selector:
    app: banana
  ports:
    - port: 3031 # Default port for image
      targetPort: 5678
      name: own
