hvg/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: hvgnewapp.newcross-sbx.com
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-hvg
            port:
              name: http
  - host: hvgnewapp.newcross-sbx.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-kubernetes-hvg
            port:
              name: https
tls:
- hosts:
  - hvgnewapp.newcross-sbx.com
  secretName: newapp-tls
